fixed the small buttons

--- a/css/agency.css
+++ b/css/agency.css
@@ -14,15 +14,15 @@ p {
 }
 
 a {
-  color: #fed136;
+  color: #3674fe;
 }
 
 a:hover {
-  color: #fec503;
+  color: #403c30;
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #141312 !important;
 }
 
 h1,
